opam-version: "1.2"
maintainer: "Aaron Dufour <thedufer@gmail.com>"
authors: ["Aaron Dufour <thedufer@gmail.com>"]
homepage: "https://github.com/thedufer/ocaml-networking"
bug-reports: "https://github.com/thedufer/ocaml-networking/issues"
dev-repo: "git+https://github.com/thedufer/ocaml-networking.git"
license: "BSD-3-clause"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build & >= "1.0+beta12"}
  "core"
  "async"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
TODO
"