opam-version: "1.2"
maintainer: "Aaron Dufour <thedufer@gmail.com>"
authors: ["Aaron Dufour <thedufer@gmail.com>"]
homepage: "https://github.com/thedufer/ocaml-networking-nodes"
bug-reports: "https://github.com/thedufer/ocaml-networking-nodes/issues"
dev-repo: "git+https://github.com/thedufer/ocaml-networking-nodes.git"
license: "BSD-3-clause"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.0"}
  "core"
  "async"
  "sdn_local_protocol"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
TODO
"